--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(BeyondTheBasics)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(BeyondTheBasics main.cpp)
+add_executable(BeyondTheBasics main.cpp BankRekening.cpp BankRekening.h BankTransactie.cpp BankTransactie.h)
